--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,12 @@ node_modules
 # testing
 coverage
 
-# next.js
+# svelte
 .next/
 out/
 build
+.svelte-kit
+package
 
 # misc
 .DS_Store
@@ -24,10 +26,13 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
+.env.*
+!.env.example
 
 # turbo
 .turbo
+
+# vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
