--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -21,13 +21,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@automerge/automerge": "2.0.2",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-ws": "^9.3.9",
     "@nestjs/websockets": "^9.3.9",
     "@nestjs-modules/ioredis": "^1.0.1",
-    "@automerge/automerge": "2.0.2",
+    "@packages/event-emitter": "workspace:*",
+    "@packages/shared": "workspace:*",
     "ioredis": "5.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
