--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,13 +20,18 @@
 		"@types/uuid": "^9.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
+		"autoprefixer": "^10.4.7",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"postcss": "^8.4.14",
+		"postcss-load-config": "^4.0.1",
+		"postcss-nested": "^6.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"svelte-preprocess": "^4.10.7",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
@@ -37,8 +42,9 @@
 	"type": "module",
 	"dependencies": {
 		"@automerge/automerge": "^2.0.2",
+		"@packages/event-emitter": "workspace:*",
+		"@packages/shared": "workspace:*",
 		"dotenv": "^16.0.3",
-		"event-emitter": "workspace:*",
 		"uuid": "^9.0.0"
 	}
 }
