--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "@packages/event-emitter",
+  "name": "@packages/shared",
   "version": "0.0.0",
-  "description": "Event emitter",
+  "description": "shared utils",
   "type": "module",
-  "module": "index.ts",
+  "main": "./dist/index.js",
   "license": "MIT",
   "scripts": {
     "lint": "prettier --check --ignore-path=../../.prettierignore . && eslint \".\"",
     "format": "prettier --write --ignore-path=../../.prettierignore ."
   },
-  "dependencies": {}
+  "dependencies": {
+    "msgpackr": "^1.8.4"
+  }
 }
