--- a/apps/server/deno.json
+++ b/apps/server/deno.json
@@ -1,5 +1,5 @@
 {
   "tasks": {
-    "dev": "deno run --watch --allow-net --allow-env --import-map=./import_map.json src/main.ts"
+    "dev": "deno run --watch --allow-net --allow-env --allow-read --allow-write --allow-ffi --import-map=./import_map.json src/main.ts"
   }
 }
