--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"generate-types": "pnpx supabase gen types typescript --project-id \"dlsyczwhvlqtwgumauae\" --schema public > ./src/db/supabase.d.ts"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
@@ -46,6 +47,7 @@
 		"@automerge/automerge": "^2.0.2",
 		"@packages/event-emitter": "workspace:*",
 		"@packages/shared": "workspace:*",
+		"@supabase/supabase-js": "2.12.1",
 		"dotenv": "^16.0.3",
 		"uuid": "^9.0.0"
 	}
