--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,11 +21,11 @@
 		"@types/uuid": "^9.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
-		"autoprefixer": "^10.4.7",
+		"autoprefixer": "^10.4.13",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.14",
+		"postcss": "^8.4.21",
 		"postcss-load-config": "^4.0.1",
 		"postcss-nested": "^6.0.1",
 		"prettier": "^2.8.0",
@@ -33,6 +33,7 @@
 		"svelte": "^3.55.0",
 		"svelte-check": "^3.0.4",
 		"svelte-preprocess": "^5.0.1",
+		"tailwindcss": "^3.3.1",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
